[tool.poetry]
name = "test-git-operations"
version = "0.1.0"
description = "blablabla"
authors = ["Pagliacii <huangmianrui0310@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
